Cambios en clases y test-Fibo2

--- a/Fibo2/pom.xml
+++ b/Fibo2/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>fibo2</finalName>
+        <finalName>fibo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
